--- a/Resonance/app/src/main/res/layout/activity_new_track_view.xml
+++ b/Resonance/app/src/main/res/layout/activity_new_track_view.xml
@@ -4,10 +4,33 @@
     android:id="@+id/activity_new_track_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.redmannequin.resonance.NewTrackView">
+
+    <TextView
+        android:text="Name"
+        android:layout_width="110dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/track_text"
+        android:layout_alignParentTop="true"
+        android:layout_alignBottom="@+id/track_name_input" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="10"
+        android:id="@+id/track_name_input"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/track_text" />
+
+    <Button
+        android:text="create"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/track_name_input"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/track_create_button" />
 
 </RelativeLayout>
