--- a/Resonance/app/src/main/res/layout/effect1.xml
+++ b/Resonance/app/src/main/res/layout/effect1.xml
@@ -15,7 +15,7 @@
 
     <SeekBar
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/seekBar" />
 
 </LinearLayout>
