--- a/Resonance/app/src/main/res/layout/activity_main_menu.xml
+++ b/Resonance/app/src/main/res/layout/activity_main_menu.xml
@@ -6,26 +6,61 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.redmannequin.resonance.MainMenuView"
+    tools:context="com.redmannequin.resonance.Views.MainMenuView"
     android:background="@mipmap/bj"
-    android:gravity="center">
+    >
 
-    <Button
-        android:text="New Project"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/newProjcet" />
+        android:layout_height="0dip"
+        android:layout_weight="0.8"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:paddingTop="30dp">
 
-    <Button
-        android:text="Load Project"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/loadProject" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Resonance"
+            android:textSize="40dp"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:id="@+id/resonance"/>
 
-    <Button
-        android:text="Settings"
+    </LinearLayout>
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/setting" />
+        android:layout_height="0dip"
+        android:layout_weight=".5"
+        android:orientation="vertical">
+
+        <Button
+            android:text="record now"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recordNow" />
+
+        <Button
+            android:text="New Project"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/newProjcet" />
+
+        <Button
+            android:text="Load Project"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/loadProject" />
+
+        <Button
+            android:text="Settings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/setting" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
