--- a/Resonance/app/src/main/res/layout/activity_record.xml
+++ b/Resonance/app/src/main/res/layout/activity_record.xml
@@ -5,9 +5,28 @@
     android:layout_height="match_parent"
     android:gravity="center">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="00:00:00"
+        android:gravity="center"
+        android:textSize="40dp"/>
+
+    <com.redmannequin.resonance.AudioWaveView
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:id="@+id/track_wave_view"/>
+
     <Button
-        android:text="Button"
+        android:text="record"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/record_button" />
+
+    <Button
+        android:text="save"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/save_button" />
+
 </LinearLayout>
