--- a/Resonance/app/src/main/res/layout/activity_new_project.xml
+++ b/Resonance/app/src/main/res/layout/activity_new_project.xml
@@ -4,7 +4,7 @@
     android:id="@+id/new_track_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.redmannequin.resonance.NewProjectView">
+    tools:context="com.redmannequin.resonance.Views.NewProjectView">
 
     <TextView
         android:text="Name"
