--- a/Resonance/app/src/main/res/layout/activity_new_track.xml
+++ b/Resonance/app/src/main/res/layout/activity_new_track.xml
@@ -61,7 +61,8 @@
         android:ems="10"
         android:id="@+id/track_path_input"
         android:layout_below="@+id/track_author_input"
-        android:layout_toEndOf="@+id/track_path_text" />
+        android:layout_toEndOf="@+id/track_path_text"
+        android:focusableInTouchMode="false"/>
 
     <Button
         android:text="create"
