--- a/Resonance/app/src/main/res/layout/activity_record.xml
+++ b/Resonance/app/src/main/res/layout/activity_record.xml
@@ -5,12 +5,13 @@
     android:layout_height="match_parent"
     android:gravity="center">
 
-    <TextView
+    <Chronometer
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="00:00:00"
+        android:textSize="40dp"
         android:gravity="center"
-        android:textSize="40dp"/>
+        android:id="@+id/chronometer2" />
+
 
     <com.redmannequin.resonance.AudioWaveView
         android:layout_width="match_parent"
