--- a/Resonance/app/src/main/res/layout/activity_new_project.xml
+++ b/Resonance/app/src/main/res/layout/activity_new_project.xml
@@ -18,12 +18,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Name"
         android:ems="10"
         android:id="@+id/project_name_input"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_toEndOf="@+id/project_name_text"/>
+        android:layout_toEndOf="@+id/project_name_text"
+        android:selectAllOnFocus="true"
+        android:hint="Project Name"/>
 
     <TextView
         android:text="Author"
@@ -33,17 +34,18 @@
         android:layout_below="@+id/project_name_text"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/project_sample_input"
-        android:layout_toStartOf="@+id/project_name_input" />
+        android:layout_toStartOf="@+id/project_name_input"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="Author"
+        android:hint="Author Name"
         android:ems="10"
         android:id="@+id/project_author_input"
         android:layout_below="@+id/project_name_input"
-        android:layout_toEndOf="@+id/project_name_text" />
+        android:layout_toEndOf="@+id/project_name_text"
+        android:selectAllOnFocus="true"/>
 
     <TextView
         android:text="sample rate"
@@ -52,17 +54,18 @@
         android:id="@+id/project_sample_text"
         android:layout_below="@+id/project_author_input"
         android:layout_alignParentStart="true"
-        android:layout_above="@+id/project_duration_input" />
+        android:layout_above="@+id/project_duration_input"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="sample rate"
+        android:hint="Sample Rate"
         android:ems="10"
         android:id="@+id/project_sample_input"
         android:layout_below="@+id/project_author_input"
-        android:layout_toEndOf="@+id/project_name_text" />
+        android:layout_toEndOf="@+id/project_name_text"
+        android:selectAllOnFocus="true"/>
 
     <TextView
         android:text="duration"
@@ -72,17 +75,18 @@
         android:layout_below="@+id/project_sample_input"
         android:layout_alignParentStart="true"
         android:layout_alignBottom="@+id/project_duration_input"
-        android:layout_toStartOf="@+id/project_sample_input" />
+        android:layout_toStartOf="@+id/project_sample_input"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="duration"
+        android:hint="Duration"
         android:ems="10"
         android:id="@+id/project_duration_input"
         android:layout_below="@+id/project_sample_input"
-        android:layout_toEndOf="@+id/project_sample_text" />
+        android:layout_toEndOf="@+id/project_sample_text"
+        android:selectAllOnFocus="true"/>
 
     <TextView
         android:text="BPM"
@@ -92,17 +96,18 @@
         android:layout_below="@+id/project_duration_input"
         android:layout_alignParentStart="true"
         android:layout_alignBottom="@+id/project_bpm_input"
-        android:layout_toStartOf="@+id/project_duration_input" />
+        android:layout_toStartOf="@+id/project_duration_input"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
-        android:text="BPM"
+        android:hint="BPM"
         android:ems="10"
         android:id="@+id/project_bpm_input"
         android:layout_below="@+id/project_duration_input"
-        android:layout_toEndOf="@+id/project_duration_text" />
+        android:layout_toEndOf="@+id/project_duration_text"
+        android:selectAllOnFocus="true"/>
 
 
     <Button
@@ -111,6 +116,6 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/project_bpm_input"
         android:layout_centerHorizontal="true"
-        android:id="@+id/create_project_button" />
+        android:id="@+id/create_project_button"/>
 
 </RelativeLayout>
