--- a/Resonance/app/src/main/res/layout/activity_track.xml
+++ b/Resonance/app/src/main/res/layout/activity_track.xml
@@ -46,10 +46,10 @@
 
     </LinearLayout>
     <!-- The navigation drawer -->
-    <ListView android:id="@+id/left_drawer"
+    <ListView android:id="@+id/effect_drawer"
         android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
+        android:layout_gravity="right"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
