--- a/Resonance/app/src/main/res/layout/activity_track.xml
+++ b/Resonance/app/src/main/res/layout/activity_track.xml
@@ -29,18 +29,25 @@
             android:orientation="horizontal">
 
             <Button
+                android:text="Effect Menu"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/effect_button"
+                android:layout_weight="1"/>
+
+            <Button
                 android:text="play"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/play_button"
-                android:layout_weight="1" />
+                android:layout_weight="1"/>
 
             <Button
                 android:text="stop"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:id="@+id/stop_button"
-                android:layout_weight="1" />
+                android:layout_weight="1"/>
 
         </LinearLayout>
 
