--- a/Resonance/app/src/main/res/layout/flanger.xml
+++ b/Resonance/app/src/main/res/layout/flanger.xml
@@ -16,4 +16,79 @@
         android:text="FLANGER"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
 
+    <EditText
+        android:id="@+id/flanger_length"
+        android:hint="0.0"
+        android:inputType="numberDecimal"
+        android:ems="6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_below="@id/flanger_title"/>
+
+    <EditText
+        android:id="@+id/flanger_wet"
+        android:hint="0.0"
+        android:inputType="numberDecimal"
+        android:ems="6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_below="@id/flanger_title"
+        android:layout_toEndOf="@+id/flanger_length"/>
+
+    <EditText
+        android:id="@+id/flanger_frequency"
+        android:hint="0.0"
+        android:inputType="numberDecimal"
+        android:ems="6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_below="@id/flanger_title"
+        android:layout_alignParentEnd="true"
+        android:layout_toEndOf="@+id/flanger_wet"/>
+
+    <TextView
+        android:id="@+id/flanger_length_text"
+        android:text="Length"
+        android:textSize="18dp"
+        android:ems="6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
+        android:gravity="center"
+        android:layout_below="@+id/flanger_length"/>
+
+    <TextView
+        android:id="@+id/flanger_wet_text"
+        android:text="WET"
+        android:textSize="18dp"
+        android:ems="6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="20dp"
+        android:gravity="center"
+        android:layout_below="@+id/flanger_wet"
+        android:layout_toEndOf="@+id/flanger_length_text"/>
+
+    <TextView
+        android:id="@+id/flanger_frequency_text"
+        android:text="Frequency"
+        android:textSize="18dp"
+        android:ems="6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_below="@+id/flanger_frequency"
+        android:layout_toEndOf="@+id/flanger_wet_text"/>
+
+    <Button
+        android:id="@+id/flanger_enter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/flanger_length_text"
+        android:text="Apply"/>
+
 </RelativeLayout>
