--- a/Resonance/app/src/main/res/layout/activity_track.xml
+++ b/Resonance/app/src/main/res/layout/activity_track.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+    android:id="@+id/track_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <!-- The main content view -->
@@ -32,21 +32,21 @@
                 android:text="Effect Menu"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/effect_button"
+                android:id="@+id/track_effect_button"
                 android:layout_weight="1"/>
 
             <Button
                 android:text="play"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/play_button"
+                android:id="@+id/track_play_button"
                 android:layout_weight="1"/>
 
             <Button
                 android:text="stop"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:id="@+id/stop_button"
+                android:id="@+id/track_stop_button"
                 android:layout_weight="1"/>
 
         </LinearLayout>
