--- a/Resonance/app/src/main/res/layout/flanger.xml
+++ b/Resonance/app/src/main/res/layout/flanger.xml
@@ -89,6 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/flanger_length_text"
-        android:text="Apply"/>
+        android:text="Apply"
+        android:freezesText="true"/>
 
 </RelativeLayout>
