--- a/Resonance/app/src/main/res/layout/activity_project.xml
+++ b/Resonance/app/src/main/res/layout/activity_project.xml
@@ -10,7 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- Timeline view goes here -->
+        <com.redmannequin.resonance.AudioWaveView
+            android:layout_width="match_parent"
+            android:layout_height="0dip"
+            android:layout_weight="0.4"
+            android:id="@+id/project_wave_view"/>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/container"
@@ -52,7 +56,7 @@
     <ListView android:id="@+id/track_drawer"
         android:layout_width="240dp"
         android:layout_height="match_parent"
-        android:layout_gravity="left"
+        android:layout_gravity="right"
         android:choiceMode="singleChoice"
         android:divider="@android:color/transparent"
         android:dividerHeight="0dp"
